versions/v0.24/modules/en/pages/user/caapf.adoc
= Cluster API Addon Provider Fleet
:revdate: 2026-06-26
:page-revdate: {revdate}

== Overview

ifeval::["{build-type}" == "product"]
Cluster API Add-on Provider for `Fleet` (CAAPF) is a Cluster API (CAPI) provider that provides integration with https://documentation.suse.com/cloudnative/continuous-delivery/v0.12/en/index.html[`Fleet`] to enable the easy deployment of applications to a CAPI-provisioned cluster.
endif::[]
ifeval::["{build-type}" == "community"]
Cluster API Add-on Provider for `Fleet` (CAAPF) is a Cluster API (CAPI) provider that provides integration with https://fleet.rancher.io/[`Fleet`] to enable the easy deployment of applications to a CAPI-provisioned cluster.
endif::[]

[TIP]
====
For more information about the provider, please refer to https://rancher.github.io/cluster-api-addon-provider-fleet/[CAAPF book].
====

[WARNING]
====
CAAPF depends on the `WatchList` Kubernetes feature gate. This feature needs to be explicitly enabled on Kubernetes `1.33` versions. See the https://kubernetes.io/docs/reference/command-line-tools-reference/feature-gates/[Kubernetes upstream documentation] for further information.
====

== Functionality

* The provider will register a newly provisioned CAPI cluster with `Fleet` by creating a `Fleet` `Cluster` instance with the same `name` and `namespace`. Applications can be automatically deployed to the created cluster using `GitOps`.
* The provider will automatically create a Fleet `ClusterGroup` for every CAPI `ClusterClass` in the `ClusterClass` namespace. This enables you to deploy the same applications to all clusters created from the same `ClusterClass`.
* The provider will automatically create a Fleet `ClusterGroup` for every referenced CAPI `ClusterClass` by `Cluster` located in a different namespace from `ClusterClass`. This enables you to deploy the same applications to all clusters referencing the same `ClusterClass` in a particular namespace.

ifeval::["{build-type}" == "product"]
This allows a user to specify either a https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/reference/ref-bundle.html[`Bundle`] resource with raw application workloads, or https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/reference/ref-gitrepo.html[`GitRepo`] to install applications from git. Each of the resources can provide https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/how-tos-for-users/gitrepo-targets.html#_defining_targets[`targets`] with any combination of:
endif::[]
ifeval::["{build-type}" == "community"]
This allows a user to specify either a https://fleet.rancher.io/ref-bundle[`Bundle`] resource with raw application workloads or https://fleet.rancher.io/ref-gitrepo[`GitRepo`] to install applications from git. Each of the resources can provide https://fleet.rancher.io/gitrepo-targets#defining-targets[`targets`] with any combination of:
endif::[]

[source,yaml]
----
  targets:
  - clusterGroup: <cluster-class-name> # If the cluster is created from cluster-class
  - clusterName: <a specific CAPI cluster name>
----

Additionally, `CAAPF` automatically propagates `CAPI` cluster labels to the `Fleet` cluster resource, so users can specify a target matching a common cluster label with:

[source,yaml]
----
  targets:
  - clusterSelector: <label selector for the cluster instances, inherited from CAPI clusters>
  - clusterGroupSelector: <label selector for the cluster group instances, labels inherited from ClusterClass>
----

== Helm Chart templating based on CAPI `Cluster` and `ControlPlane`

ifeval::["{build-type}" == "product"]
The *Cluster API Addon Provider Fleet* automates application https://documentation.suse.com/cloudnative/continuous-delivery/latest/en/reference/ref-fleet-yaml.html#_values_templating[templating] for imported CAPI clusters based on matching cluster state. This feature ensures that the state of a CAPI cluster and resources is always up-to-date in the `spec.templateValues.ClusterValues` field of the Fleet cluster resource. This allows users to:
endif::[]
ifeval::["{build-type}" == "community"]
The *Cluster API Addon Provider Fleet* automates application https://fleet.rancher.io/ref-fleet-yaml#templating[templating] for imported CAPI clusters based on matching cluster state. This feature ensures that the state of a CAPI cluster and resources is always up-to-date in the `spec.templateValues.ClusterValues` field of the Fleet cluster resource. This allows users to:
endif::[]

- Reference specific parts of the CAPI cluster directly or via Helm substitution patterns referencing `.ClusterValues.Cluster` data.
- Substitute based on the state of the control plane resource via the `.ClusterValues.ControlPlane` field.
- Substitute based on the state of the infrastructure cluster resource via the `.ClusterValues.InfrastructureCluster` field.
- Maintain a consistent application state across different clusters.
- Use the same template for multiple matching clusters to simplify deployment and management.

For more information on the feature, please refer to https://rancher.github.io/cluster-api-addon-provider-fleet/04_reference/02_templating-strategy.html[templating documentation] in the book.

== Example - deploying kindnet CNI

*Demo*:

image:https://asciinema.org/a/seEFHKz5DVpUe5CQvWcddSJBp.svg[CAAPF - deploying kindnet CNI, link=https://asciinema.org/a/seEFHKz5DVpUe5CQvWcddSJBp, window="_blank"]

== Example - deploying Calico CNI using GitRepo

*Demo*: 

image:https://asciinema.org/a/706570.svg[CAAPF - Installing Calico via GitRepo,link=https://asciinema.org/a/706570, window="_blank"]

For a tutorial and prerequisites, please refer to https://rancher.github.io/cluster-api-addon-provider-fleet/03_tutorials/04_installing_calico_via_gitrepo.html[gitrepo tutorial] section in the book.
